TODO:
	- Config generation
	
Version 2.18 - 2009-0
	- Fixed install.sh (no config created)
	- Removed old and broken template files
	- Added error graph for network interfaces
	- Added back-to-index links to html-files

Version 2.17 - 2008-10-28
    - Changed configuration to YAML
    - Changed class variables to instance variables
    - changed buffer objects to local scope (were: instance variables)
	- Replaced third party RRDtool module with RRDTools own RRD module

Version 2.16 - 2007-05-07
    - Fixed memory graph
    - Fixed disk graphs (32bit integer overflows)
    - Removed unnecessary system calls from disk statistics
    - Fixed graph creations of cpu, load, processes
    - install.sh removed -s flag from hostname command

Version 2.15 - 2007-05-06
    - Added README

Version 2.14 - 2007-04-30
    - Fixed install.sh
    - Fixed index.html
    - Fixed graphs
    - Fixed hdd statistics

Version 2.13 - 2007-04-29
    - First public release

Version 2.12 - 2007-04-29
    - Fixed Typo in install.sh
    - Chmod +x as default for install.sh
    - Added --pid-file argument to sysstat.rb
    - sysstat.rb now writes and removes pidfile

Version 2.11 - 2007-04.26
    - Added rc/init script

Version 2.10 - 2007-04-26
    - Added usage of GetoptLong
    - All files, indent: Converted tabs to spaces

Version 2.9 - 2007-04-26
    - Fixed trap for reload (added 2*Proccess.wait)
    - Fixed Smain::kill_childs (to SIGTERM, sleep, SIGKILL)
    - Added second Process.wait at end of sysstat.rb

Version 2.8 - 2007-04-24
    - Fixed install.sh
    - Fixed sysstat.conf
    - Fixed typo in Sprocesses.rb
    
Version 2.7 - 2007-04-25
    - Fixed multiple bugs and errors

Version 2.6 - 2007-04-24
    - Better comments in the code
    - Fixed typos in the install.sh

Version 2.5 - 2007-04-24
    - Added missing html-files for hdd statistic
    - Fixed index.html for hdd statistics
    
Version 2.4 - 2007-04-24
    - Added hdd statistics