@@ -2,7 +2,7 @@
 ## Main configuration
 Smain: 
   ## Location of the installation
-  installdir: INSTALLDIR
+  libdir: LIBDIR
 
   ## Location of the database files
   dbdir: DBDIR
@@ -31,6 +31,7 @@ Smain:
   - Smemory
   - Snetwork
   - Sprocesses
+  - Susers
 
 
 ## Configuration for connection statistics
