@@ -1,15 +1,14 @@
 
-## Configuration for postfix statistics
-Spostfix:
-  ## Prefix for rrd and graph files
-  prefix: postfix
-  spooldir: POSTIFX_SPOOL
-
-
 ## Configuration for processes statistics
 Sprocesses: 
   ## Prefix for rrd and graph files
   prefix: processes
+
+
+## Configuration for active users statistics
+Susers:
+  ## Prefix for rrd and graph files
+  prefix: users
 
 
 ##
