@@ -40,6 +40,10 @@ NETWORK
 	<a href="./processes.html"><img BORDER="0" src="processes-day.png" alt="Process count statistics"></a>
 </p>
 
+<p>
+	<a href="./users.html"><img BORDER="0" src="users-day.png" alt="Active users statistics"></a>
+</p>
+
 HDD
 
 </td>
