@@ -1,0 +1,36 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head>
+<title>Active Users Statistics for HOSTNAME</title>
+<meta http-equiv="Content-Language" content="en-us" />
+<meta http-equiv="Content-Process" content="text/html; charset=utf-8" />
+<meta http-equiv="Refresh" content="300">
+<meta http-equiv="Pragma" content="no-cache">
+</head>
+
+<body bgcolor="#ffffff">
+<h1>Active Users Statistics for HOSTNAME</h1>
+<p><a href="./index.html">Back to index</a></p>
+
+<div style="background: #dddddd; width: 700px">
+	<h2>Day Graph</h2>
+</div>
+<p><img border="0" src="users-day.png" alt="usergraph"></p>
+
+<div style="background: #dddddd; width: 700px">
+	<h2>Week Graph</h2>
+</div>
+<p><img border="0" src="users-week.png" alt="usergraph"></p>
+
+<div style="background: #dddddd; width: 700px">
+	<h2>Month Graph</h2>
+</div>
+<p><img border="0" src="users-month.png" alt="usergraph"></p>
+
+<div style="background: #dddddd; width: 700px">
+	<h2>Year Graph</h2>
+</div>
+<p><img border="0" src="users-year.png" alt="usergraph"></p>
+
+</body>
+</html>
