@@ -1,11 +1,14 @@
 TODO:
-	- Config generation
+	- Maybe: CPUFreq Statistics
+	- Upgrade process
+	- FreeBSD: Kernel-Memory
 	
 Version 2.18 - 2009-0
 	- Fixed install.sh (no config created)
 	- Removed old and broken template files
 	- Added error graph for network interfaces
 	- Added back-to-index links to html-files
+	- Added user statistics
 
 Version 2.17 - 2008-10-28
     - Changed configuration to YAML
